# nekopricer

./: .dockerignore  .gitignore  .gitmodules  BUGS.MD  Dockerfile  README.md  TODO.MD  example-config.json  example.env  main.py  pyproject.toml  requirements.txt
nekopricer/: __main__.py
nekopricer/classes/: database.py  options.py  pricelist.py  pricelist2.py  pricer.py  server.py  snapshots.py  tokens.py  websocket.py
nekopricer/schemas/: item_list.py  options.py  pricelist.py  tokens.py
references/: Civic Duty Mk.II War Paint (Factory New).json  Strange Civic Duty Mk.II War Paint (Factory New).json  Strange Ghastlierest Gibus.json  bptf-autopricer.js  methods.js  pricelist.json  tokens.json
src/: backpacktf.py  currencies.py  database.py  helpers.py  methods.js  pricelist.py  pricer.py  server.py  storage.py  thread.py
src/pricer/: pricelist.py  pricer.py
src/server/: server.py  tokens.py
