[tool.poetry]
name = "nekopricer"
version = "0.1.0"
description = "Nekomatic.TF Pricer"
authors = ["juniorISO69960"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"
asyncio = "^3.4.3"
tf2-utils = "^2.2.0"
flask = "^3.1.0"
minio = "^7.2.11"
flask-socketio = "^5.4.1"
requests = "^2.32.3"
websockets = "^14.1"
colorlog = "^6.9.0"
python-dotenv = "^1.0.1"
jsonschema = "^4.23.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[tool.ruff]
include = ["nekopricer/*"]
exclude = ["tests/*", "*.json"]
line-length = 150

[tool.ruff.lint.per-file-ignores]
"nekopricer/__main__.py" = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
